--- a/src/css/scss/app.scss
+++ b/src/css/scss/app.scss
@@ -3,4 +3,5 @@
 @import "common/modal";
 @import "components/menu";
 @import "components/products/product";
+@import "components/products/product-show";
 
