--- a/src/css/scss/app.scss
+++ b/src/css/scss/app.scss
@@ -2,6 +2,7 @@
 @import "common/page";
 @import "common/modal";
 @import "components/menu";
+@import "components/home";
 @import "components/products/product";
 @import "components/products/product-show";
 
