--- a/src/css/app.css
+++ b/src/css/app.css
@@ -44,6 +44,10 @@ menu .item {
 .home {
   background: #fff; }
 
+.products-container {
+  padding: 0;
+  background: transparent; }
+
 .products-list {
   display: flex;
   flex-direction: row;
